--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "test" : "jest"
+
   },
   "dependencies": {
     "groq-sdk": "^0.36.0",
@@ -15,12 +17,16 @@
     "react-dom": "19.2.0"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.28.5",
     "@tailwindcss/postcss": "^4",
+    "@types/jest": "^30.0.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "babel-jest": "^30.2.0",
     "eslint": "^9",
     "eslint-config-next": "16.0.3",
+    "jest": "^30.2.0",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
